refactor: 인증 및 메시지 모듈 리팩토링 및 버그 수정
--- 본문 ---
- `CookieProvider` 클래스를 `auth.infra.web` 패키지로 이동하고 관련 import를 업데이트했습니다.
- `MessageRepository`의 쿼리 메서드 `findSliceByChannelId`를 Spring Data JPA 명명 규칙에 맞춰 `findSliceByChannel_Id`로 변경하고 `@Query` 어노테이션을 제거했습니다.
- `MessageService`에서 변경된 `MessageRepository` 메서드 이름을 반영했습니다.
- `ReadStatusService`에서 읽음 상태 생성 가능 여부 검증 로직을 `count > 0`으로 수정하여, 이미 존재하는 읽음 상태가 하나라도 있을 경우 예외를 발생시키도록 개선했습니다.
- `PageResponseMapper`에서 빈 리스트 생성 시 `Collections.emptyList()`를 사용하도록 변경했습니다.
- `application.yml`에 `JWT_REGISTRY_STORE_TYPE` 설정에 대한 주석을 추가했습니다.
- `AbstractEntityReferenceResolver`에 `ids` 컬렉션이 null이거나 비어있을 경우 빈 리스트를 반환하도록 방어 로직을 추가했습니다.
- `MessageRepository`의 `findSliceByChannel_Id` EntityGraph에서 `author.status`를 제거하여 불필요한 조회를 줄였습니다.